fix text overflow on show page and event calendar hover effect

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -132,7 +132,7 @@ a {
 }
 
 .no-hover:hover {
-  background-color: transparent;
+  background-color: transparent !important;
 }
 
 // Footer
