--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -4,27 +4,30 @@
     border-radius: 5px;
     margin-left: auto;
     margin-right: auto;
-  }
-  .blue-box-show {
-    width: 60%;
-    background: white;
-    border: solid;
-    border-color: #bfb87d;
-    border-radius: 5px;
-    margin-left: auto;
-    margin-right: auto;
-    box-shadow: 0px 4px 10px 1px rgba(0,0,0,0.1);
-    padding-top: 6%;
-    padding-bottom: 6%;
-  }
+}
   
-  p.show-text {
-    font-family: "EB Garamond";
-    font-size: 2.1em;
-    text-align: center;
-  }
+.blue-box-show {
+  width: 60%;
+  background: white;
+  border: solid;
+  border-color: #bfb87d;
+  border-radius: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 60px;
+  box-shadow: 0px 4px 10px 1px rgba(0,0,0,0.1);
+  padding-top: 6%;
+  padding-bottom: 6%;
+  word-wrap: break-word;
+}
 
-  p.show-text-header {
-    font-family: "EB Garamond";
-    font-size: 22px;
-  }
+p.show-text {
+  font-family: "EB Garamond";
+  font-size: 2.1em;
+  text-align: center;
+}
+
+p.show-text-header {
+  font-family: "EB Garamond";
+  font-size: 22px;
+}
