--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -45,6 +45,7 @@ td.account-td {
 th.custom-table, td.custom-table {
   //padding-left: 30px !important;
   padding-right: 40px !important;
+  word-wrap: break-word;
 }
 
 
